# RandomSequences

./: .gitignore  .gitmodules  CMakeLists.txt  PseudoRandomSequences.sln  README.md  SequenceConversation.cpp  SequenceConversation.h  SequenceConverter.cpp  SequenceConverter.h  SequenceGenerator.cpp  SequenceGenerator.h  TODO  TODO.txt  book_stack_test.h  discrete_fourier_transform_test.h  i_random_generator.h  isequence.h  maincrypto.cpp  sequence_converter.cpp  sequence_converter.h  statisticChiSquared.h
src/PseudoRandomSequences.NISTstatisticTests/: CMakeLists.txt  assess.h
src/PseudoRandomSequences.NISTstatisticTests/statTests/: assess  sha1.seq
src/PseudoRandomSequences.NISTstatisticTests/statTests/data/: data.stdRand
src/PseudoRandomSequences.NISTstatisticTests/statTests/experiments/AlgorithmTesting/: finalAnalysisReport.txt  freq.txt
src/PseudoRandomSequences.NISTstatisticTests/statTests/experiments/AlgorithmTesting/ApproximateEntropy/: results.txt  stats.txt
src/PseudoRandomSequences.NISTstatisticTests/statTests/experiments/AlgorithmTesting/BlockFrequency/: results.txt  stats.txt
src/PseudoRandomSequences.NISTstatisticTests/statTests/experiments/AlgorithmTesting/CumulativeSums/: data1.txt  data2.txt  results.txt  stats.txt
src/PseudoRandomSequences.NISTstatisticTests/statTests/experiments/AlgorithmTesting/FFT/: results.txt  stats.txt
src/PseudoRandomSequences.NISTstatisticTests/statTests/experiments/AlgorithmTesting/Frequency/: results.txt  stats.txt
src/PseudoRandomSequences.NISTstatisticTests/statTests/experiments/AlgorithmTesting/LinearComplexity/: results.txt  stats.txt
src/PseudoRandomSequences.NISTstatisticTests/statTests/experiments/AlgorithmTesting/LongestRun/: results.txt  stats.txt
src/PseudoRandomSequences.NISTstatisticTests/statTests/experiments/AlgorithmTesting/NonOverlappingTemplate/: data1.txt  data10.txt  data100.txt  data101.txt  data102.txt  data103.txt  data104.txt  data105.txt  data106.txt  data107.txt  data108.txt  data109.txt  data11.txt  data110.txt  data111.txt  data112.txt  data113.txt  data114.txt  data115.txt  data116.txt  data117.txt  data118.txt  data119.txt  data12.txt  data120.txt  data121.txt  data122.txt  data123.txt  data124.txt  data125.txt  data126.txt  data127.txt  data128.txt  data129.txt  data13.txt  data130.txt  data131.txt  data132.txt  data133.txt  data134.txt  (+104 more)
src/PseudoRandomSequences.NISTstatisticTests/statTests/experiments/AlgorithmTesting/OverlappingTemplate/: results.txt  (+1 more)
src/PseudoRandomSequences.NISTstatisticTests/statTests/experiments/G-SHA1/: freq.txt
src/PseudoRandomSequences.NISTstatisticTests/statTests/experiments/QCG2/: finalAnalysisReport.txt  freq.txt
src/PseudoRandomSequences.NISTstatisticTests/statTests/experiments/my/: results.txt
src/PseudoRandomSequences.NISTstatisticTests/statTests/src/: approximateEntropy.c  assess.c  generators.c  utilities.c
src/PseudoRandomSequences.StaticticTests/: CMakeLists.txt  ListOfVectors.h  PseudoRandomSequences.vcxproj  PseudoRandomSequences.vcxproj.filters  README.md  TODO.txt  beaconConfigsRun.cpp  book_stack_test.h  generatorsTestConfigRun.cpp  generators_test_config_run.cpp  i_statistical_test.cpp  i_statistical_test.h  input.maxim  main.cpp  maincrypto.cpp  nist_tests_wrapper.cpp  nist_tests_wrapper.h  pseudoRandomSequences.h  runStatisticTests.cpp  sequence_converter.h  statisticChiSquared.h  statistic_chi_squared.h  testGenerator.cpp  tests.cpp  untitled.pro
src/PseudoRandomSequences.StaticticTests/bookStackTest/: bs.cpp  order_test.h  order_test.h.autosave
src/PseudoRandomSequences.StaticticTests/lipaboyLibrary/: README.md
src/PseudoRandomSequences.StaticticTests/lipaboyLibrary/src/: lipaboy_test.h
src/PseudoRandomSequences.StaticticTests/lipaboyLibrary/src/common_interfaces/: algebra.h  comparable.h
src/PseudoRandomSequences.StaticticTests/lipaboyLibrary/src/containers/: bit_vector.h
src/PseudoRandomSequences.StaticticTests/lipaboyLibrary/src/intervals/: cubesegment.h  cutoffborders.h  interval.h  rectsegment.h  segment.h
src/PseudoRandomSequences.StaticticTests/lipaboyLibrary/src/maths/: point2d.h  precision_number.h  precision_number_can_throw.h  rotateoperator.h  vector3d.h  vector4d.h
src/PseudoRandomSequences.StaticticTests/statTests/include/: assess.h  cephes.h  config.h  decls.h  defs.h  externs.h  generators.h  genutils.h  matrix.h  stat_fncs.h  utilities.h
src/PseudoRandomSequences.StaticticTests/statTests/src/: approximateEntropy.cpp  blockFrequency.cpp  cephes.cpp  cusum.cpp  dfft.cpp  discreteFourierTransform.cpp  frequency.cpp  generators.cpp  genutils.cpp  linearComplexity.cpp  longestRunOfOnes.cpp  matrix.cpp  nonOverlappingTemplateMatchings.cpp  overlappingTemplateMatchings.cpp  randomExcursions.cpp  randomExcursionsVariant.cpp  rank.cpp  runs.cpp  serial.cpp  universal.cpp  utilities.cpp
src/PseudoRandomSequences.StaticticTests/testsTemp/: attemptToBreakTestRuns.txt
src/nist_statistical_tests/statTests/: CMakeLists.txt  assess
src/nist_statistical_tests/statTests/include/: externs.h  stat_fncs.h
src/nist_statistical_tests/statTests/src/: frequency.c
src/statistical_tests/: CMakeLists.txt  generators_test_config_run.cpp  i_statistical_test.h  nist_tests_wrapper.cpp  run_statistical_tests.cpp  sequence_converter.h  statistic_chi_squared.h  tests.cpp
src/statistical_tests/bookStackTest/: order_test.h
src/statistical_tests/lipaboy_library/src/: lipaboy_test.cpp
src/statistical_tests/lipaboy_library/src/common_interfaces/: algebra.h  containable.h  either_comparable.h
src/statistical_tests/lipaboy_library/src/maths/: fixed_precision_number.h  line2d.h  matrix4x4.cpp  matrix4x4.h  rotateoperator.cpp  vector2d.h  vector4d.cpp
src/statistical_tests/statTests/include/: assess.h  cephes.h  config.h  decls.h  defs.h  externs.h  generators.h  genutils.h  matrix.h  stat_fncs.h  utilities.h
src/statistical_tests/statTests/src/: blockFrequency.cpp  frequency.cpp  generators.cpp  genutils.cpp  nonOverlappingTemplateMatchings.cpp  rank.cpp  runs.cpp  universal.cpp
tests/: CMakeLists.txt  tests.cpp
(+271 files in other folders)
